# pybooktools

./: .gitignore  .markdownlint.json  404.html  BlankInitFiles.ps1  README.md  index.html  mkdocs.yml  pyproject.rye  pyproject.toml  refresh.bat
.uv/: config.toml
docs/: 404.html  index.html  index.md
docs/search/: search_index.json
documentation/: index.md
graveyard/: test_update_console_output.py  test_update_markdown_code_listings.py
search/: search_index.json
src/: pydemo_ai_flattened.txt  pydemo_claude_fixes.txt
src/ai_flatten/: flatten_dir_for_ai.py  un_flatten.py
src/display/: __init__.py
src/pybooktools/: __init__.py  __main__.py  add_output_tracking.py  check_example_output.py  check_pyfile_outputs.py  check_pyfile_outputs_ast.py  check_pyfile_outputs_cst.py  incorporate_tracked_output.py  md_auto_slug.py  output_checker.py  output_tracer.py  python_output_tester.py  reminder.py  reminders_from_pyproject.py  remove_validation_dir.py  renumber_chapters.py  rich_output_test.py  slug_line.py  test.py  test2.py  test_trace.py  tracker.py  update_console_output.py  update_example_output.py  update_markdown_code_listings.py  update_markdown_python_examples.py  update_python_examples.py  util.py  validate_output.py
src/pybooktools/aocl/: __init__.py  add_ocl.py  embed_ocl_results.py  ocl_format.py  produce_ocled_example.py
src/pybooktools/auto_ocl/: auto_ocl.py  auto_ocl_prompt.md  auto_ocl_prompt_2.md  ocl_format.py  ocl_format_prompt.md  produce_ocl.py  tmp.md
src/pybooktools/call_and_show/: call_display.py  catcher2.py  catchers.py
src/pybooktools/code_viewer/: code_viewer.py  viewer_server.py
src/pybooktools/demos/: indented_prints.py  longlines.py  multiline.py  pizza_order.py  pizza_order_3.py  recursion_example.py  remove_validation_dir.py  simple.py  simple_3.py  simple_ocl.py
src/pybooktools/diagnostics/: __init__.py  reporting.py  tracer.py
src/pybooktools/display/: __init__.py  report.py
src/pybooktools/error_reporting/: __init__.py  reporting.py
src/pybooktools/example_checker/: add_output_tracking.py  incorporate_tracked_output.py  number_output_strings.py  prompt1.py  prompt2.py  prompt3.py  tracker.py  update_python_examples.py
src/pybooktools/exception_catcher/: README.md  demo_exception_checker.py  exception_catcher.py  simple_demo.py
src/pybooktools/extract_examples/: extractor.py  prompt.txt
src/pybooktools/find_files/: __init__.py  file_finder.py  find_file_types.py
src/pybooktools/inject_examples/: injector.py  prompt.txt
src/pybooktools/invoke_tasks/: __init__.py  find_python_files.py  prettier.py  run_all.py  semantic_breaks.py  validate_output.py
src/pybooktools/md_cleaner/: __init__.py  clean_markdown.py
src/pybooktools/md_examples/: __init__.py  examples.py  extractor.py  fenced_blocks.py  injector.py  insert_example_prompt.md  insert_one_example_into_chapter.py  update_markdown_from_repo.py
src/pybooktools/md_extract_examples/: extractor.py
src/pybooktools/morgue/: prompt1.py  prompt2.py
src/pybooktools/ocl/: __init__.py  add_ocl.py  embed_ocl_results.py  generate_ocl.py  ocl_container.py  ocl_container_by_hand.py  ocl_container_pickle.py  ocl_format.py  ocl_generator.py  ocl_generator_0.py  produce_ocled_example.py  prompt.md  test_ocl_container.py
src/pybooktools/ocl_1/: __init__.py  fix_prompt.md  (+3 more)
src/pydemo/: __init__.py  demo_dir.py
tests/: test_renumber_chapters.py  test_slug_line.py  test_update_console_output.py  test_update_markdown_code_listings.py  test_util.py  test_validate_output.py
xperiments/: RunAllPythonExamplesParallel.ps1  empty_token.py  enum_plus_literal.py  update_markdown_python_examples.py
xperiments/ai_flatten/: flatten_dir_for_ai.py  un_flatten.py
xperiments/call_and_show/:  prompt.txt  catch.py  catcher.py  catchers.py  show_call.py
xperiments/graveyard/: run_all_old.py
xperiments/powershell_scripts/: Confirm-Or-Exit.ps1  RoundTrip.ps1  RunAllPythonExamples.ps1  ValidateExampleOutput.ps1  extract.ps1  go.ps1
xperiments/pydemo/: __init__.py  demo_dir.py
xperiments/python_chapter/: python_chapter.py  python_example.py
xperiments/slide_show/: md_to_marp.py
(+231 files in other folders)
