# For uv @ https://docs.astral.sh/uv/
[project]
name = "pybooktools"
version = "0.1.1"
description = "Tools I use for writing Python books."
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "cyclopts>=3.7.0",
    "hypothesis>=6.125.2",
    "icecream>=2.1.3",
    "pyperclip>=1.9.0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
aiflatten = "ai_flatten.flatten_dir_for_ai:main"
unflatten = "ai_flatten.un_flatten:main"
px = "pybooktools.update_example_output.update_example_output:app"
pybtools = "pybooktools.reminder:main"
slug = "pybooktools.slug_line:app"
mdslug = "pybooktools.md_auto_slug:main"
chapnum = "pybooktools.renumber_chapters:app"
mdvalid = "pybooktools.pymarkdown_validator.validate:app"
mdextract = "pybooktools.extract_examples.extractor:app"
mdinject = "pybooktools.inject_examples.injector:app"
repoclean = "pybooktools.repo_cleaner.clean_example_repo:app"
#bookup = "pybooktools.update_markdown_python_examples:app"

[tool.uv]
package = true

[tool.uv.pip]
generate-hashes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pybooktools"]

[tool.pytest.ini_options]
pythonpath = ["src/pybooktools"]
